title wrapping issue #570

--- a/ckanext/odm_nav/fanstatic/odm_nav.css
+++ b/ckanext/odm_nav/fanstatic/odm_nav.css
@@ -2564,3 +2564,12 @@ a.btn + a.btn {
 .panel-body{
    overflow: scroll;
 }
+
+.mega-menu-horizontal{
+    padding: 10px!important;
+}
+
+.resource-reorder-title{
+   position: relative;
+   max-width: 80%;
+}
